fix footer so page doesn't cut off for certain pages. Also add title to show page for collection

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -139,3 +139,7 @@ span{
 .secure-text{
   padding-top: 10px;
 }
+
+footer{
+  padding: 10%;
+}
